--- a/src/main/webapp/WEB-INF/views/fragments/layout.html
+++ b/src/main/webapp/WEB-INF/views/fragments/layout.html
@@ -24,6 +24,9 @@
                 <li th:classappend="${module == 'about' ? 'active' : ''}">
                     <a href="#about" th:href="@{/about}">About</a>
                 </li>
+                <li th:classappend="${module == 'findata' ? 'active' : ''}">
+                    <a href="#about" th:href="@{/findata}">Findata</a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li sec:authorize="!isAuthenticated()">
