--- a/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
@@ -18,6 +18,7 @@
             <th scope="col">value</th>
             <th scope="col">paid price</th>
             <th scope="col">current price</th>
+            <th>Edit</th>
         </tr>
     </thead>
     <tbody>
@@ -30,7 +31,13 @@
                 <span th:case="'red'" th:style="'color:red'" th:text="${balanceList.currentPrice}"></span>
                 <span th:case="'green'" th:style="'color:green'" th:text="${balanceList.currentPrice}"></span>
             </td>
-            <td ></td>
+<!--            <td th:if="${balanceList.paidPrice != '-'}">-->
+<!--                <a th:href="@{/bitstamp/{cryptoId}/edit(cryptoId=${balanceList.name})}">Edit</a>-->
+<!--            </td>-->
+            <td th:switch="${balanceList.paidPrice != '-'}">
+                <span th:case="${true}"><a th:href="@{/bitstamp/{cryptoId}/edit(cryptoId=${balanceList.name})}">Edit</a></span>
+                <span th:case="*"><a th:href="@{/bitstamp/{cryptoId}/add(cryptoId=${balanceList.name})}">Add</a></span>
+            </td>
         </tr>
     </tbody>
 </table>
