minor change in bitstamp.html

--- a/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
@@ -18,7 +18,7 @@
             <th scope="col">value</th>
             <th scope="col">paid price</th>
             <th scope="col">current price</th>
-            <th>Edit</th>
+            <th scope="col">Edit/Add</th>
         </tr>
     </thead>
     <tbody>
