--- a/src/main/webapp/WEB-INF/views/home/homeNotSignedIn.html
+++ b/src/main/webapp/WEB-INF/views/home/homeNotSignedIn.html
@@ -12,7 +12,7 @@
 <div th:replace="fragments/layout :: header"></div>
 <div class="container">
     <div class="text-center">
-        <h1>Test</h1>
+        <h1>Hi Yan,</h1>
         <p class="lead">
             Welcome to the Spring <span th:text="${springVersion}">0.0.0</span> MVC Quickstart application!
         </p>
@@ -20,7 +20,7 @@
             Get started quickly by signing up.
         </p>
         <p>
-            <a class="btn btn-success btn-lg" id="signup">Sign up</a>
+            <!--<a class="btn btn-success btn-lg" id="signup">Sign up</a>-->
         </p>
     </div>
     <div th:replace="fragments/layout :: footer">&copy; 2016 The Static Templates</div>
