--- a/src/main/webapp/WEB-INF/views/home/homeSignedIn.html
+++ b/src/main/webapp/WEB-INF/views/home/homeSignedIn.html
@@ -16,9 +16,12 @@
         <!-- /* The message code is returned from the @Controller */ -->
         <div th:replace="fragments/components :: alert (type=${#strings.toLowerCase(message.type)}, message=#{${message.message}(${#authentication.name})})">&nbsp;</div>
     </th:block>
-    <p class="lead text-center">
-        Welcome to the Spring <span th:text="${springVersion}">0.0.0</span> MVC Quickstart application!
-    </p>
+    <div class="text-center">
+        <h1>Hi Yan,</h1>
+        <p class="lead text-center">
+            Welcome to the Spring <span th:text="${springVersion}">0.0.0</span> MVC Quickstart application!
+        </p>
+    </div>
     <div th:replace="fragments/layout :: footer"></div>
 </div>
 </body>
