--- a/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
@@ -14,12 +14,12 @@
     <table id="dtBasicExample" class="table table-dark">
     <thead>
         <tr>
-            <th scope="col">name</th>
-            <th scope="col">value</th>
-            <th scope="col">paid price</th>
-            <th scope="col">current price</th>
+            <th scope="col">Name</th>
+            <th scope="col">Value</th>
+            <th scope="col">Paid price</th>
+            <th scope="col">Current price</th>
             <th scope="col">%</th>
-            <th scope="col">Edit/Add</th>
+            <th scope="col">Add/Edit</th>
         </tr>
     </thead>
     <tbody>
