add delete functionnality for crypto

--- a/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
@@ -19,7 +19,7 @@
             <th scope="col">Paid price</th>
             <th scope="col">Current price</th>
             <th scope="col">%</th>
-            <th scope="col">Add/Edit</th>
+            <th scope="col">Add/Edit/<a th:href="@{/bitstamp/delete}">Delete</a></th>
         </tr>
     </thead>
     <tbody>
