--- a/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
@@ -11,20 +11,58 @@
 <body>
 <div th:replace="fragments/layout :: header"></div>
 <div class="container">
+    <h1>Crytocurrencies</h1>
     <table id="dtBasicExample" class="table table-dark">
-    <thead>
+        <thead>
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Value</th>
+                <th scope="col">Portfolio</th>
+                <th scope="col">Paid price</th>
+                <th scope="col">Current price</th>
+                <th scope="col">%</th>
+                <th scope="col">Add/Edit/<a th:href="@{/bitstamp/delete}">Delete</a></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="balanceList : ${balanceList5}">
+                <td th:text="${balanceList.name}"></td>
+                <td th:text="${balanceList.portfolioName}"></td>
+                <td th:text="${balanceList.value}"></td>
+                <td th:text="${balanceList.paidPrice}"></td>
+                <td th:text="${balanceList.currentPrice}"></td>
+                <td th:switch="${balanceList.profitOrLoss}">
+                    <span th:case="'black'" th:text="${balanceList.priceUpDownPercent}"></span>
+                    <span th:case="'red'" th:style="'color:red'" th:text="${balanceList.priceUpDownPercent}"></span>
+                    <span th:case="'green'" th:style="'color:green'" th:text="${balanceList.priceUpDownPercent}"></span>
+                </td>
+    <!--            <td th:if="${balanceList.paidPrice != '-'}">-->
+    <!--                <a th:href="@{/bitstamp/{cryptoId}/edit(cryptoId=${balanceList.name})}">Edit</a>-->
+    <!--            </td>-->
+                <td th:switch="${balanceList.paidPrice != '-'}">
+                    <span th:case="${true}"><a th:href="@{/bitstamp/{cryptoId}/edit(cryptoId=${balanceList.name})}">Edit</a></span>
+                    <span th:case="*"><a th:href="@{/bitstamp/{cryptoId}/add(cryptoId=${balanceList.name})}">Add</a></span>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <h1>Cash</h1>
+    <table id="dtBasicExample2" class="table table-dark">
+        <thead>
         <tr>
             <th scope="col">Name</th>
             <th scope="col">Value</th>
+            <th scope="col">Portfolio</th>
             <th scope="col">Paid price</th>
             <th scope="col">Current price</th>
             <th scope="col">%</th>
             <th scope="col">Add/Edit/<a th:href="@{/bitstamp/delete}">Delete</a></th>
         </tr>
-    </thead>
-    <tbody>
-        <tr th:each="balanceList : ${balanceList}">
+        </thead>
+        <tbody>
+        <tr th:each="balanceList : ${balanceList6}">
             <td th:text="${balanceList.name}"></td>
+            <td th:text="${balanceList.portfolioName}"></td>
             <td th:text="${balanceList.value}"></td>
             <td th:text="${balanceList.paidPrice}"></td>
             <td th:text="${balanceList.currentPrice}"></td>
@@ -33,16 +71,16 @@
                 <span th:case="'red'" th:style="'color:red'" th:text="${balanceList.priceUpDownPercent}"></span>
                 <span th:case="'green'" th:style="'color:green'" th:text="${balanceList.priceUpDownPercent}"></span>
             </td>
-<!--            <td th:if="${balanceList.paidPrice != '-'}">-->
-<!--                <a th:href="@{/bitstamp/{cryptoId}/edit(cryptoId=${balanceList.name})}">Edit</a>-->
-<!--            </td>-->
+            <!--            <td th:if="${balanceList.paidPrice != '-'}">-->
+            <!--                <a th:href="@{/bitstamp/{cryptoId}/edit(cryptoId=${balanceList.name})}">Edit</a>-->
+            <!--            </td>-->
             <td th:switch="${balanceList.paidPrice != '-'}">
                 <span th:case="${true}"><a th:href="@{/bitstamp/{cryptoId}/edit(cryptoId=${balanceList.name})}">Edit</a></span>
                 <span th:case="*"><a th:href="@{/bitstamp/{cryptoId}/add(cryptoId=${balanceList.name})}">Add</a></span>
             </td>
         </tr>
-    </tbody>
-</table>
+        </tbody>
+    </table>
 </div>
 <div th:replace="fragments/layout :: footer"></div>
 </body>
