--- a/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
@@ -46,7 +46,7 @@
             </tr>
         </tbody>
     </table>
-    <h1>Cash</h1>
+    <h1>Cash Flow</h1>
     <table id="dtBasicExample2" class="table table-dark">
         <thead>
         <tr>
