--- a/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
@@ -77,6 +77,29 @@
         </tr>
         </tbody>
     </table>
+    <h1>Last sold cryptocurrencies</h1>
+    <table id="dtBasicExample3" class="table table-dark">
+        <thead>
+        <tr>
+            <th scope="col">Date</th>
+            <th scope="col">Name</th>
+            <th scope="col">Sold Price</th>
+            <th scope="col">Amount</th>
+            <th scope="col">Total</th>
+            <th scope="col">Fee</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="balanceList : ${balanceList7}">
+            <td th:text="${balanceList.datetime}"></td>
+            <td th:text="${balanceList.cryptoUsdName}"></td>
+            <td th:text="${balanceList.cryptoUsd}"></td>
+            <td th:text="${balanceList.cryptoAmount}"></td>
+            <td th:text="${balanceList.usd}"></td>
+            <td th:text="${balanceList.fee}"></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 <div th:replace="fragments/layout :: footer"></div>
 </body>
