add pagination page

--- a/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
@@ -60,6 +60,239 @@
             </tr>
         </tbody>
     </table>
+    <div th:switch="${pagination}">
+        <p th:case="1">
+            Pagination :
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/1(totalPagination=${pagination})}">1</a>
+            &nbsp;&nbsp;
+            2
+            &nbsp;&nbsp;
+            3
+            &nbsp;&nbsp;
+            4
+            &nbsp;&nbsp;
+            5
+            &nbsp;&nbsp;
+            6
+            &nbsp;&nbsp;
+            7
+            &nbsp;&nbsp;
+            8
+            &nbsp;&nbsp;
+            9
+            &nbsp;&nbsp;
+            10
+        </p>
+        <p th:case="2">
+            Pagination :
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/1(totalPagination=${pagination})}">1</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/2(totalPagination=${pagination})}">2</a>
+            &nbsp;&nbsp;
+            3
+            &nbsp;&nbsp;
+            4
+            &nbsp;&nbsp;
+            5
+            &nbsp;&nbsp;
+            6
+            &nbsp;&nbsp;
+            7
+            &nbsp;&nbsp;
+            8
+            &nbsp;&nbsp;
+            9
+            &nbsp;&nbsp;
+            10
+        </p>
+        <p th:case="3">
+            Pagination :
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/1(totalPagination=${pagination})}">1</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/2(totalPagination=${pagination})}">2</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/3(totalPagination=${pagination})}">3</a>
+            &nbsp;&nbsp;
+            4
+            &nbsp;&nbsp;
+            5
+            &nbsp;&nbsp;
+            6
+            &nbsp;&nbsp;
+            7
+            &nbsp;&nbsp;
+            8
+            &nbsp;&nbsp;
+            9
+            &nbsp;&nbsp;
+            10
+        </p>
+        <p th:case="4">
+            Pagination :
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/1(totalPagination=${pagination})}">1</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/2(totalPagination=${pagination})}">2</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/3(totalPagination=${pagination})}">3</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/4(totalPagination=${pagination})}">4</a>
+            &nbsp;&nbsp;
+            5
+            &nbsp;&nbsp;
+            6
+            &nbsp;&nbsp;
+            7
+            &nbsp;&nbsp;
+            8
+            &nbsp;&nbsp;
+            9
+            &nbsp;&nbsp;
+            10
+        </p>
+        <p th:case="5">
+            Pagination :
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/1(totalPagination=${pagination})}">1</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/2(totalPagination=${pagination})}">2</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/3(totalPagination=${pagination})}">3</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/4(totalPagination=${pagination})}">4</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/5(totalPagination=${pagination})}">5</a>
+            &nbsp;&nbsp;
+            6
+            &nbsp;&nbsp;
+            7
+            &nbsp;&nbsp;
+            8
+            &nbsp;&nbsp;
+            9
+            &nbsp;&nbsp;
+            10
+        </p>
+        <p th:case="6">
+            Pagination :
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/1(totalPagination=${pagination})}">1</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/2(totalPagination=${pagination})}">2</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/3(totalPagination=${pagination})}">3</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/4(totalPagination=${pagination})}">4</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/5(totalPagination=${pagination})}">5</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/6(totalPagination=${pagination})}">6</a>
+            &nbsp;&nbsp;
+            7
+            &nbsp;&nbsp;
+            8
+            &nbsp;&nbsp;
+            9
+            &nbsp;&nbsp;
+            10
+        </p>
+        <p th:case="7">
+            Pagination :
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/1(totalPagination=${pagination})}">1</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/2(totalPagination=${pagination})}">2</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/3(totalPagination=${pagination})}">3</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/4(totalPagination=${pagination})}">4</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/5(totalPagination=${pagination})}">5</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/6(totalPagination=${pagination})}">6</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/7(totalPagination=${pagination})}">7</a>
+            &nbsp;&nbsp;
+            8
+            &nbsp;&nbsp;
+            9
+            &nbsp;&nbsp;
+            10
+        </p>
+        <p th:case="8">
+            Pagination :
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/1(totalPagination=${pagination})}">1</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/2(totalPagination=${pagination})}">2</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/3(totalPagination=${pagination})}">3</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/4(totalPagination=${pagination})}">4</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/5(totalPagination=${pagination})}">5</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/6(totalPagination=${pagination})}">6</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/7(totalPagination=${pagination})}">7</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/8(totalPagination=${pagination})}">8</a>
+            &nbsp;&nbsp;
+            9
+            &nbsp;&nbsp;
+            10
+        </p>
+        <p th:case="9">
+            Pagination :
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/1(totalPagination=${pagination})}">1</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/2(totalPagination=${pagination})}">2</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/3(totalPagination=${pagination})}">3</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/4(totalPagination=${pagination})}">4</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/5(totalPagination=${pagination})}">5</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/6(totalPagination=${pagination})}">6</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/7(totalPagination=${pagination})}">7</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/8(totalPagination=${pagination})}">8</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/9(totalPagination=${pagination})}">9</a>
+            &nbsp;&nbsp;
+            10
+        </p>
+        <p th:case="10">
+            Pagination :
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/1(totalPagination=${pagination})}">1</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/2(totalPagination=${pagination})}">2</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/3(totalPagination=${pagination})}">3</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/4(totalPagination=${pagination})}">4</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/5(totalPagination=${pagination})}">5</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/6(totalPagination=${pagination})}">6</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/7(totalPagination=${pagination})}">7</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/8(totalPagination=${pagination})}">8</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/9(totalPagination=${pagination})}">9</a>
+            &nbsp;&nbsp;
+            <a th:href="@{/bitstamp/pagination/{totalPagination}/10(totalPagination=${pagination})}">10</a>
+        </p>
+        <p th:case="*">No pagination</p>
+    </div>
     <h1>Cash Flow</h1>
     <table id="dtBasicExample2" class="table table-dark">
         <thead>
